--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
-    "cypress": "^13.7.3"
+    "cypress": "^13.7.3",
+    "cypress-file-upload": "^5.0.8"
   },
   "devDependencies": {
     "cypress-mochawesome-reporter": "^3.7.0",
